<resources>
    <string name="app_name">Patient-ChatApp</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome \n to \n Patient Chat App</string>
    <string name="create_an_account">Create an account</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="type_a_message">type a message</string>
    <string name="test_message">test message</string>
    <string name="last_seen"> seen</string>
    <string name="send_message">Send Message</string>

</resources>