<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".views.fragments.authFragments.RegisterFragment">

    <include
        android:id="@+id/toolbarRgister"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <EditText
            android:id="@+id/userName_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:textColorHint="@color/white">
        </EditText>

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextFields">
        </EditText>

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white">
        </EditText>


        <Button
            android:id="@+id/btnRegsiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@color/white"
            >
        </Button>
    </LinearLayout>

</RelativeLayout>